fixed database & fixed variable type issue
