# routers/tables/tableRoute.go
@@ -40,10 +40,10 @@ func createTable() []types.TableStruct {
 	return table
 }
 
-func sliceSearch(s []types.OrderStruct, Phone string, DateTime string) bool {
+func sliceSearch(s []types.OrderStruct, Phone string, Date string, Time string) bool {
 
 	for _, value := range s {
-		if value.Phone == Phone && value.DateTime == DateTime {
+		if value.Phone == Phone && value.Date == Date && value.Time == Time {
 			return true
 		}
 	}
@@ -59,9 +59,9 @@ func searchTable(s []int, ID int) bool {
 	return true
 }
 
-func sliceInsert(s *[]types.OrderStruct, Phone string, DateTime string, Table int) bool {
+func sliceInsert(s *[]types.OrderStruct, Phone string, Date string, Time string, Table int) bool {
 	for i, value := range *s {
-		if value.Phone == Phone && value.DateTime == DateTime && searchTable(value.Table, Table) {
+		if value.Phone == Phone && value.Date == Date && value.Time == Time && searchTable(value.Table, Table) {
 			value.Table = append(value.Table, Table)
 			(*s)[i].Table = value.Table
 			return true
@@ -91,21 +91,24 @@ func checkStatus(table []types.TableStruct) gin.HandlerFunc {
 
 		for rows.Next() {
 			var id int
-			var tableID int
+			var table int
 			var name string
+			var gender int
 			var phone string
-			var numberOfPeople int
-			var dateTime string
+			var aldult int
+			var child int
+			var date string
+			var time string
 			var remark string
-			err = rows.Scan(&id, &tableID, &name, &phone, &numberOfPeople, &dateTime, &remark)
+			err = rows.Scan(&id, &table, &name, &gender, &phone, &aldult, &child, &date, &time, &remark)
 			errPrint(err)
 
-			if len(store) == 0 || !sliceSearch(store, phone, dateTime) {
+			if len(store) == 0 || !sliceSearch(store, phone, date, time) {
 				var tableSlice = make([]int, 0)
-				tableSlice = append(tableSlice, tableID)
-				store = append(store, types.OrderStruct{Name: name, Phone: phone, NumberOfPeople: numberOfPeople, Table: tableSlice, DateTime: dateTime, Remark: remark})
+				tableSlice = append(tableSlice, table)
+				store = append(store, types.OrderStruct{Name: name, Phone: phone, Aldult: aldult, Child: child, Table: tableSlice, Date: date, Time: time, Remark: remark})
 			} else {
-				sliceInsert(&store, phone, dateTime, tableID)
+				sliceInsert(&store, phone, date, time, table)
 			}
 
 		}
@@ -134,14 +137,17 @@ func getOrderStatus() gin.HandlerFunc {
 		OrderStatus := make([]types.OrderStatusStruct, 0)
 		for rows.Next() {
 			var id int
-			var tableID int
+			var table int
 			var name string
+			var gender int
 			var phone string
-			var numberOfPeople int
-			var dateTime string
+			var aldult int
+			var child int
+			var date string
+			var time string
 			var remark string
-			err = rows.Scan(&id, &tableID, &name, &phone, &numberOfPeople, &dateTime, &remark)
-			OrderStatus = append(OrderStatus, types.OrderStatusStruct{TableID: tableID, OrderName: name, OrderPhone: phone, NumberOfPeople: numberOfPeople, OrderDateTime: dateTime, Remark: remark})
+			err = rows.Scan(&id, &table, &name, &gender, &phone, &aldult, &child, &date, &time, &remark)
+			OrderStatus = append(OrderStatus, types.OrderStatusStruct{TableID: table, Name: name, Gender: gender, Phone: phone, Aldult: aldult, Child: child, Date: date, Time: time, Remark: remark})
 			errPrint(err)
 		}
 		conn.Close()
@@ -153,17 +159,18 @@ func getOrderStatus() gin.HandlerFunc {
 func orderSeat() gin.HandlerFunc {
 	return func(context *gin.Context) {
 		var order types.OrderStruct
+
 		err := context.BindJSON(&order)
 		errPrint(err)
 
 		conn, err := initDB()
 		errPrint(err)
 
-		stmt, err := conn.Prepare("INSERT INTO orderQueue(tableID, orderName, orderPhone, numberOfPeople, orderDateTime, remark) values(?,?,?,?,datetime(?),?)")
+		stmt, err := conn.Prepare("INSERT INTO orderQueue(tableID, name, gender, phone, aldult, child, date, time, remark) values(?, ?, ?, ?, ?, ?, ?, ?, ?)")
 		errPrint(err)
 
 		for _, value := range order.Table {
-			res, err := stmt.Exec(strconv.Itoa(value), order.Name, order.Phone, order.NumberOfPeople, order.DateTime, order.Remark)
+			res, err := stmt.Exec(value, order.Name, order.Gender, order.Phone, order.Aldult, order.Child, order.Date, order.Time, order.Remark)
 			errPrint(err)
 
 			id, err := res.LastInsertId()
